[tool.poetry]
name = "coges"
version = "0.9.0"
description = "Library for implementing non-linear behaviour and stream processing"
authors = ["Jellyfish.tech <manager@jellyfish.tech>"]
license = "MIT"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
